<resources>
    <string name="app_name">Meditation App</string>
    <string name="home">Home</string>
    <string name="meditations">Meditations</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="basic_chakra_cuning">Basic Chakra Cuning</string>
    <string name="start">Start</string>
    <string name="view">View</string>
    <string name="start_now">Start Now</string>
    <string name="_00_00_mins">00:00 mins</string>
    <string name="avg_meditation_time">Avg Meditation Time</string>
    <string name="_0">0</string>
    <string name="meditation_streak">Meditation Streak</string>
    <string name="chakra_cuning">Chakra Cuning</string>
    <string name="source_code">Source Code</string>
    <string name="g_space">G Space</string>
    <string name="set_timer">Set Timer</string>
    <string name="_00h_01m_00s">00H:01M:00S</string>
    <string name="optimize">Optimize</string>
    <string name="music">Music</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="lock_landscape_mode">Lock Landscape Mode</string>
    <string name="enter">ENTER</string>
    <string name="g_space_settings">G Space Settings</string>
    <string name="source_code_settings">Source Code Settings</string>
    <string name="chakra_cuning_settings">Chakra Cuning settings</string>
    <string name="hours">Hours</string>
    <string name="mins">Mins</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
</resources>
