<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.settingsModule.SettingsFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout2" android:baselineAligned="false">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/llChakraCuning"
                    android:orientation="vertical"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="30dp"
                    android:background="@color/light_blue">

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:src="@drawable/chakra_cuning_white" android:contentDescription="@string/chakra_cuning_settings"/>

                <TextView
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/chakra_cuning"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="30dp"
                    android:id="@+id/llSourceCode"
                    android:background="@android:color/black">

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:src="@drawable/source_code_white" android:contentDescription="@string/source_code_settings"/>

                <TextView
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/source_code"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="30dp"
                    android:orientation="vertical"
                    android:id="@+id/llGSpace"
                    android:background="@android:color/black">

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:src="@drawable/g_space_white" android:contentDescription="@string/g_space_settings"/>

                <TextView
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/g_space"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/set_timer"
                  android:textColor="@color/white"
                  android:background="@color/bottomTab"
                  android:padding="10dp"
                  android:textSize="18sp"
                  app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginTop="10dp" android:id="@+id/textView4"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/_00h_01m_00s"
                  android:textColor="@color/white"
                  android:background="@android:color/black"
                  android:padding="10dp"
                  android:textSize="18sp"
                  android:gravity="center"
                  android:id="@+id/tvTimer"
                  app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/optimize"
                  android:textColor="@color/white"
                  android:background="@color/bottomTab"
                  android:padding="10dp"
                  android:textSize="18sp"

                  app:layout_constraintTop_toBottomOf="@+id/tvTimer" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:id="@+id/textView5"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/music"
                  android:textSize="18sp"
                  android:textColor="@color/white"
                  app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" android:layout_marginTop="16dp" android:id="@+id/textView7"/>

        <Switch android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchMusic"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/set_reminder"
                  android:textSize="18sp"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
                  android:layout_marginTop="16dp" android:id="@+id/textView6"/>

        <Switch android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchReminder"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/switchMusic"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/lock_landscape_mode"
                  android:textSize="18sp"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
                  android:id="@+id/textView10"/>

        <Switch android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchLandscape"
                android:checked="true"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/switchReminder"/>

        <Button android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/light_blue"
                android:text="@string/enter"
                android:textSize="18sp"
                android:id="@+id/bEnter"
                app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>




    </android.support.constraint.ConstraintLayout>



</ScrollView>