<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".ui.settingsModule.SetTimerActivity">

    <NumberPicker android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/npHours"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="76dp"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/hours"
              android:textColor="@color/white"
              app:layout_constraintStart_toEndOf="@+id/npHours" android:layout_marginStart="8dp"
              app:layout_constraintTop_toTopOf="@+id/npHours" app:layout_constraintBottom_toBottomOf="@+id/npHours"
              android:id="@+id/tvHours"/>

    <NumberPicker android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/npMins"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toEndOf="@+id/tvHours" android:layout_marginStart="24dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tvMins"
              android:textColor="@color/white"
              android:text="@string/mins"
              app:layout_constraintStart_toEndOf="@+id/npMins"
              app:layout_constraintBottom_toBottomOf="@+id/npMins" app:layout_constraintTop_toTopOf="@+id/npMins"
              android:layout_marginStart="8dp"/>


    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bSave"
            android:text="@string/save"
            android:background="@color/light_blue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>