<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.homeModule.HomeFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:id="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLatestMeditationName"
                android:text="Advanecd Chakra Cuning"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLatestMeditationDescription"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:text="Experience the Stereoscopic View with music gchghm"
                android:layout_marginBottom="5dp"/>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@android:color/darker_gray"
              android:layout_marginBottom="20dp"/>

        <Button android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/light_blue"
                android:id="@+id/bStartNow"
                android:text="@string/start_now"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/rvHomeMeditations"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <View
            android:layout_width="2dp"
            android:layout_height="100dp"
            android:background="@color/light_blue"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/rvHomeMeditations" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/view"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00_mins"
            android:id="@+id/tvAvgMeditationTime"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/rvHomeMeditations"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/textView2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_meditation_time"
            app:layout_constraintStart_toEndOf="@+id/view"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAvgMeditationTime"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:id="@+id/textView2"/>

    <View
            android:layout_width="2dp"
            android:layout_height="100dp"
            android:background="@color/light_blue"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/rvHomeMeditations"
            android:id="@+id/view2" app:layout_constraintEnd_toStartOf="@+id/textView3" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvMeditationStreak"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/rvHomeMeditations"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/textView3"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meditation_streak"
            app:layout_constraintTop_toBottomOf="@+id/tvMeditationStreak"
            android:layout_marginTop="5dp"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:layout_marginEnd="32dp"/>



</android.support.constraint.ConstraintLayout>